# micro_rand

./: Cargo.toml  Readme.md
lib/: lib.rs  random.rs
